--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Remo's Portfolio</title>
-    <link rel="stylesheet" href="src/style.css">
+    <link rel="stylesheet" href="src/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,7 +23,7 @@
         <nav>
             <img class="logo" src="src/images/logo2.png" alt="Remo Rulloda's Logo">
             <!-- <a target="_blank" href="https://icons8.com/icon/JcIARfA9uKZj/r-key">R Key</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
-            <ul>
+            <ul id="nav-list">
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact-me">Contact</a></li>
