Background change and project change

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <!-- Tribute Page -->
             <div class="project-card">
-                <img class="project-image" src="src/images/tributepage.jpeg" alt="Tribute Page">
+                <img class="project-image" src="src/images/tributepage.png" alt="Tribute Page">
                 <h3>Tribute Page</h3>
                 <p class="subtext">A Tribute Page from freeCodeCamp's Responsive Web Design course.</p>
                 <hr>
@@ -118,11 +118,11 @@
                 </p>
             </div>
 
-            <!-- Whack-A-Mole -->
+            <!-- Batman Landing Page -->
             <div class="project-card">
-                <img class="project-image" src="src/images/whackamole.png" alt="Grammy Whack-A-Mole">
-                <h3>Ariana Grande <br> Grammy Whack-A-Mole</h3>
-                <p class="subtext">Try to catch as many Grammys as possible!</p>
+                <img class="project-image" src="src/images/landing-page.png" alt="Batman Landing Page">
+                <h3> Batman Landing Page </h3>
+                <p class="subtext">See a Batman-themed landing site!</p>
                 <hr>
                 <p class="subtext"><a class="project-link" href="https://remorulloda-whackamole.netlify.app/"
                         target="_blank">View here</a>
