--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
             <!-- Batman Landing Page -->
             <div class="project-card">
-                <img class="project-image" src="src/images/landing-page.png" alt="Batman Landing Page">
-                <h3> Batman Landing Page </h3>
-                <p class="subtext">See a Batman-themed landing site!</p>
+                <img class="project-image" src="src/images/landing-page.png" alt="Robins Landing Page">
+                <h3> Robins Landing Page </h3>
+                <p class="subtext">See a Robin-themed landing site!</p>
                 <hr>
                 <p class="subtext"><a class="project-link" href="https://remorulloda-landing-page.netlify.app/"
                         target="_blank">View here</a>
