--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                         here</a></p>
             </div>
 
+            <!-- Robin Landing Page -->
+            <div class="project-card">
+                <img class="project-image" src="src/images/landing-page.png" alt="Robins Landing Page">
+                <h3> Robins Landing Page </h3>
+                <p class="subtext">See a Robin-themed landing site!</p>
+                <hr>
+                <p class="subtext"><a class="project-link" href="https://remorulloda-landing-page.netlify.app/"
+                        target="_blank">View here</a>
+                </p>
+            </div>
+
             <!-- Survey Form -->
             <div class="project-card">
                 <img class="project-image" src="src/images/surveyform.png" alt="Survey Form">
@@ -118,16 +129,6 @@
                 </p>
             </div>
 
-            <!-- Batman Landing Page -->
-            <div class="project-card">
-                <img class="project-image" src="src/images/landing-page.png" alt="Robins Landing Page">
-                <h3> Robins Landing Page </h3>
-                <p class="subtext">See a Robin-themed landing site!</p>
-                <hr>
-                <p class="subtext"><a class="project-link" href="https://remorulloda-landing-page.netlify.app/"
-                        target="_blank">View here</a>
-                </p>
-            </div>
         </div>
     </section>
 
