Adding more projects & Fixing media queries

--- a/index.html
+++ b/index.html
@@ -129,6 +129,29 @@
                 </p>
             </div>
 
+            <!-- Calculator App -->
+            <div class="project-card">
+                <img src="src/images/calculator.png" alt="picture of a calculator" class="project-image">
+                <h3>Simple Calculator</h3>
+                <p class="subtext">A simple calculator.</p>
+                <hr>
+                <p class="subtext"><a href="https://remorulloda-calculator.netlify.app/" class="project-link"
+                        target="_blank">View here</a>
+                </p>
+            </div>
+
+            <!-- Rock Paper Scissors -->
+            <div class="project-card">
+                <img src="src/images/rps.png" alt="picture of rock paper scissors" class="project-image">
+                <h3>Rock, Paper, Scissors!</h3>
+                <p class="subtext">A Rock, Paper, Scissors Web App</p>
+                <hr>
+                <p class="subtext"><a href="https://remorulloda-rock-paper-scissors.netlify.app/" class="project-link"
+                        target="_blank">View here</a>
+                </p>
+            </div>
+
+
         </div>
     </section>
 
