--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
                 </p>
             </div>
 
+            <!-- Etch-a-Sketch -->
+            <div class="project-card">
+                <img src="src/images/etch-a-sketch.png" alt="picture of etch-a-sketch" class="project-image">
+                <h3>Etch-a-Sketch</h3>
+                <p class="subtext">Draw to your heart's content</p>
+                <hr>
+                <p class="subtext"><a href="https://remorulloda-etch-a-sketch.netlify.app/" class="project-link"
+                        target="_blank">View here</a>
+                </p>
+            </div>
+
 
         </div>
     </section>
